1/1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
spec:
  type: ClusterIP
  selector:
    app: app-1
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
